<resources>
    <string name="app_name">Калькулятор</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="_0">0</string>
    <string name="ac">AC</string>
    <string name="percent">%</string>
    <string name="division">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="string_0">0</string>
    <string name="comma">,</string>
    <string name="equal">=</string>
    <string name="times">times</string>
    <string name="backspace">backspace</string>
    <string name="load">Загрузка…</string>
    <string name="auth">Авторизация</string>
    <string name="sms">Код</string>
    <string name="btn_change_pin_code">изменить PIN-код</string>
    <string name="edit_first_new_pin">Введите новый PIN-код</string>
    <string name="info_for_pin">Новый Pin-код должен содержать от 3 до 8 цифр и это не должно быть повторение одной цифры, например: 8888 или 11111</string>
    <string name="second_edit_pin">Повторите PIN-код</string>
    <string name="btn_open">ок</string>
    <string name="get_sms_with_code">ок</string>
    <string name="phone_number">Телефон</string>
    <string name="clear_all_settings_app">откатить все настройки</string>
    <string name="main_screen_title">Управление API</string>
    <string name="settings">Настройки</string>
    <string name="logout">разлогиниться</string>
    <string name="back">Назад</string>
    <string name="menu">Меню</string>
    <string name="users">Пользователи</string>
    <string name="lorem_full">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</string>
    <string name="active">Активность</string>
    <string name="create_user">Создать пользователя</string>
    <string name="main_page">Главная страница</string>
    <string name="delete">Удалить</string>
    <string name="cancel">отмена</string>
    <string name="save">сохранить</string>
    <string name="ping_all">ping all</string>
    <string name="new_version_text">Имеется новая версия, обратитесь к администратору</string>
    <string name="message">Сообщение</string>
    <string name="send_user_message">send user message</string>
    <string name="search">Поиск</string>
    <string name="wait">Ожидайте</string>


</resources>