<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.screens.auth_screen.AuthFragment">

    <TextView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        android:text="@string/back"
        android:textColor="@color/Black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableStartCompat="@drawable/arrow_back" />

    <LinearLayout
        android:id="@+id/fieldsRoot"
        android:layout_marginTop="176dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/phoneRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:visibility="visible"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/white"
                app:prefixText="+7">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnGetSms"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:text="@string/get_sms_with_code"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/smsRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="visible"
            android:visibility="gone"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/smsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sms"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnCheckSms"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_open"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/changeSecretPinRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:visibility="gone"
            android:visibility="gone"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNewPin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_first_new_pin"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/secondNewPin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/second_edit_pin"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnUpdateNewPin"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_change_pin_code"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/info_for_pin"/>

        </LinearLayout>

        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:textColor="@color/red"
            android:visibility="gone"
            tools:visibility="gone"
            tools:text="Неверно введен телефон"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/timerText"
            android:visibility="gone"
            tools:visibility="visible"
            android:textColor="@color/Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            tools:text="Повторно можно получить смс : 60 "/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            tools:layout_editor_absoluteX="158dp"
            tools:layout_editor_absoluteY="538dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load"
            android:textSize="25sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>