<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main_activity.MainActivity">

    <RelativeLayout
        android:id="@+id/titleField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/main_screen_title" />

        <ImageView
            android:id="@+id/btnAddUser"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="13dp"
            android:src="@drawable/ic_baseline_person_add_24"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <ImageView
            android:id="@+id/btnBackOnFragment"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="13dp"
            android:src="@drawable/ic_baseline_close_black_24"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/btnScreenSettings"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="13dp"
            app:layout_constraintStart_toStartOf="@+id/titleText"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_baseline_menu_24" />

    </RelativeLayout>

    <TextView
        android:id="@+id/notificationMainActivity"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/titleField"
        android:gravity="center"
        android:textColor="@color/white"
        android:padding="5dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:background="@color/Black"
        android:text="@string/new_version_text"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:id="@+id/leftMenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/white"
        android:translationZ="100dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@drawable/bg_title_menu"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnCloseMenu"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="13dp"
                android:src="@drawable/ic_baseline_close_black_24" />

            <TextView
                style="@style/TextView.Standart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="25sp"
                android:padding="8dp"
                android:text="@string/menu" />
        </RelativeLayout>



        <TextView
            android:id="@+id/menuBtnMainScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            style="@style/TextView.Standart"
            android:visibility="visible"
            android:text="@string/main_page"/>

        <TextView
            android:id="@+id/menuBtnUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            style="@style/TextView.Standart"
            android:visibility="visible"
            android:text="@string/users"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:layout_marginVertical="8dp"
            android:background="@color/gray" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/indian_red"
            android:text="@string/logout" />

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationMainActivity"
        app:navGraph="@navigation/nav_graph" />

</androidx.constraintlayout.widget.ConstraintLayout>