<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_alert_dialog"
    android:minHeight="100dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_title_alert_dialog"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/White"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Предупреждение" />

    <TextView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:visibility="gone"
        android:paddingHorizontal="15dp"
        android:paddingVertical="30dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextMessage"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="Вы хотите отключить Api?" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_text"
        android:padding="8dp"
        android:minHeight="100dp"
        android:layout_marginVertical="10dp"
        android:gravity="top"
        app:layout_constraintBottom_toTopOf="@+id/delimiter"
        android:hint="@string/message"
        app:layout_constraintTop_toBottomOf="@+id/body"
        android:layout_margin="10dp" />

    <View
        android:id="@+id/delimiter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextMessage"
        app:layout_constraintBottom_toTopOf="@+id/btnsField"
        android:background="@color/dark_gray"/>

    <LinearLayout
        android:id="@+id/btnsField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/btnPositive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingVertical="5dp"
            android:textStyle="bold"
            android:text="@string/yes"
            android:textSize="18sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/dark_gray"/>

        <TextView
            android:id="@+id/btnNegative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingVertical="5dp"
            android:text="@string/no"
            android:textSize="18sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

