<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.screens.users_detail_screen.UsersUpdateFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:hint="Имя"
        tools:layout_editor_absoluteY="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            tools:text="Maks" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userPhoneField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameField"
        app:prefixText="+7"
        tools:hint="Телефон"
        tools:layout_editor_absoluteY="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="phone"
            tools:text="9536506580" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/errorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/indian_red"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/activeCheckBox"
        tools:text="Error"
        tools:visibility="visible" />

    <CheckBox
        android:id="@+id/activeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/Black"
        android:enabled="false"
        android:text="@string/active"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPhoneField" />

    <TextView
        android:id="@+id/btnDeleteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/activeCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activeCheckBox"
        app:drawableLeftCompat="@drawable/ic_baseline_delete_24" />

    <Button
        android:id="@+id/btnStartEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/Black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/errorText"
        tools:layout_editor_absoluteY="8dp"
        tools:text="Редактировать" />

    <LinearLayout
        android:id="@+id/btnSaveField"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorText"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSaveEdit"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/save" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnCancelEdit"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Black"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorText" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:indeterminateTint="@color/Black"
        app:layout_constraintTop_toBottomOf="@+id/btnStartEdit"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>